<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MenuActivity"
    android:background="#9F111B">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".72"
            android:background="@mipmap/glove">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:contentDescription="main logo" />
        </FrameLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/new_session"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03"
            android:onClick="goToSetup"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/clock"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".03"
            android:onClick="goToClock" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/presets"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03"
            android:onClick="goToSettings" />
    </LinearLayout>
</RelativeLayout>
