<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent" tools:context=".SessionSetupActivity"
    android:background="#9F111B"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setupHolder"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/roundLengthContainer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/round_length_label"
                android:id="@+id/roundLengthLabel"
                android:layout_weight=".5"
                android:textColor="@color/silver"
                android:textStyle="bold" />

            <com.hayden.joseph.bagwork.EditTimeText
                android:imeOptions="flagNoExtractUi"
                android:background="@drawable/time_picker_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/roundLengthMinutes"
                android:layout_weight=".25"
                android:text="@string/round_min_default"
                android:textColor="@color/silver"
                android:editable="false"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/minute_short"
                android:id="@+id/textView6"
                android:textColor="@color/silver" />

            <com.hayden.joseph.bagwork.EditTimeText
                android:imeOptions="flagNoExtractUi"
                android:background="@drawable/time_picker_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/roundLengthSeconds"
                android:layout_weight=".25"
                android:text="@string/sec_default"
                android:textColor="@color/silver"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/second_short"
                android:id="@+id/textView3"
                android:textColor="@color/silver" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Rest Length"
                android:id="@+id/textView2"
                android:layout_weight=".5"
                android:textColor="@color/silver"
                android:textStyle="bold" />

            <com.hayden.joseph.bagwork.EditTimeText
                android:imeOptions="flagNoExtractUi"
                android:background="@drawable/time_picker_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/restLengthMinutes"
                android:layout_weight=".25"
                android:text="@string/rest_min_default"
                android:textColor="@color/silver"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/minute_short"
                android:id="@+id/textView7"
                android:textColor="@color/silver" />

            <com.hayden.joseph.bagwork.EditTimeText
                android:imeOptions="flagNoExtractUi"
                android:background="@drawable/time_picker_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/restLengthSeconds"
                android:layout_weight=".25"
                android:text="@string/sec_default"
                android:textColor="@color/silver"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/second_short"
                android:id="@+id/textView4"
                android:textColor="@color/silver" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/num_rounds_label"
                android:id="@+id/numRoundsLabel"
                android:layout_weight=".5"
                android:textColor="@color/silver"
                android:textStyle="bold" />

            <EditText
                android:imeOptions="flagNoExtractUi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numRounds"
                android:layout_weight=".5"
                android:layout_gravity="center_vertical"
                android:textColor="@color/silver"
                android:gravity="center_horizontal"
                android:numeric="integer"
                android:text="@string/num_rounds_default" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:onClick="startClock" />

    </LinearLayout>
</ScrollView>